# MAPF-LRR2023

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  apt.txt  run.sh  run_benchmark.py  run_py_driver.py
configs/: Paris_1_256.json  brc202d.json  random-32-32-20.json  random-32-32-20_annotated.json  sortation_large.json  warehouse_large.json  warehouse_small.json
example_problems/game.domain/: brc202d_4000.json
example_problems/game.domain/agents/: brc202d_4000.agents
example_problems/game.domain/tasks/: brc202d_4000.tasks
example_problems/warehouse.domain/: sortation_large_10000.json  warehouse_small_1000.json  warehouse_small_600.json
example_problems/warehouse.domain/agents/: sortation_large_10000.agents  warehouse_small_1000.agents  warehouse_small_600.agents
inc/: MAPFPlanner.h
inc/LNS/: ConstraintTable.h  Instance.h  LNSSolver.h  PathTable.h  ReservationTable.h  common.h
inc/LNS/CBS/: CBS.h  CBSHeuristic.h  CBSNode.h  Conflict.h  ConstraintPropagation.h  CorridorReasoning.h  ECBS.h  ECBSNode.h  GCBS.h  GCBSNode.h  IncrementalPairwiseMutexPropagation.hpp  MDD.h  MutexReasoning.h  PBS.h  RectangleReasoning.h
inc/LNS/PIBT/: graph.h  grid.h  mapf.h  node.h  pibt.h  pibt_agent.h  pps.h  problem.h  simplegrid.h  solver.h  task.h  util.h  vec2f.h  winpibt.h
inc/LNS/Parallel/: DataStructure.h  GlobalManager.h  LocalOptimizer.h  NeighborGenerator.h  TimeSpaceAStarPlanner.h  TimeSpaceAStarState.h
inc/LaCAM2/: LaCAM2Solver.hpp  executor.hpp  graph.hpp  instance.hpp  planner.hpp  post_processing.hpp  slow_executor.hpp  utils.hpp
inc/LaCAM2/SUO2/: CostMap.h  SpatialSUO.h  SpatialSearch.h  SpatialState.h
inc/RHCR/interface/: CompetitionGraph.h  RHCRInit.h  RHCRSolver.h
inc/RHCR/main/: BasicGraph.h  BasicSystem.h  ECBS.h  ECBSNode.h  ID.h  LRAStar.h  MAPFSolver.h  PBS.h  PBSNode.h  PathTable.h  PriorityGraph.h  ReservationTable.h  SIPP.h  SingleAgentSolver.h  StateTimeAStar.h  States.h  WHCAStar.h  common.h
inc/util/: Analyzer.h  CompetitionActionModel.h  Dev.h  HeuristicTable.h  MyCommon.h  MyLogger.h  StatsTree.h  TimeLimiter.h  Timer.h  analyze.h
inc/util/SearchForHeuristics/: DataStructure.h  SpatialSearch.h  SpatialState.h
my_viz/: analyze.py  map.py  task_distribution.py  viz_ppath.py
scripts/: brc202d_tabu_locs.txt  gen_random_instances.py  gen_weight_brc202d.py  gen_weight_paris.py  gen_weight_random.py  gen_weight_sortation_large.py  gen_weight_warehouse_large.py  instance.py  map.py  paris_weight_001.w  paris_weight_002.w  paris_weight_004.w  paris_weight_011.w  paris_weight_012.w  paris_weight_013.w  paris_weight_014.w  paris_weight_015.w  plot_task_curve.py  plot_wait_heatmap.py  random_600_tabu_locs.txt  random_800_uncompressed_weights.w  random_800_uncompressed_weights_with_wait_2000_steps.w  random_800_uncompressed_weights_with_wait_5000_steps.w  random_weight_001.w  random_weight_003.w  random_weight_004.w  random_weight_010.w  random_weight_011.w  random_weight_012.w  random_weight_015.w  random_weight_018.w  random_weight_020.w  random_weight_030.w  random_weight_033.w  random_weight_036.w  random_weight_040.w  random_weight_050.w  random_weight_101.w  sortation_large_weight_001.w  sortation_large_weight_002.w  (+11 more)
src/: CompetitionSystem.cpp  MAPFPlanner.cpp  analyze_results.cpp  py_driver.cpp
src/LNS/: ConstraintTable.cpp  Instance.cpp  LNSSolver.cpp  PathTable.cpp  ReservationTable.cpp  common.cpp
src/LNS/Parallel/: DataStructure.cpp  GlobalManager.cpp  LocalOptimizer.cpp  NeighborGenerator.cpp  TimeSpaceAStarPlanner.cpp
src/LaCAM2/: LaCAM2Solver.cpp  graph.cpp  instance.cpp  planner.cpp  post_processing.cpp  utils.cpp
src/LaCAM2/SUO2/: SpatialSUO.cpp
src/RHCR/interface/: CompetitionActionModel.cpp  CompetitionGraph.cpp  RHCRSolver.cpp
src/RHCR/main/: BasicGraph.cpp  BasicSystem.cpp  ECBS.cpp  ECBSNode.cpp  ID.cpp  LRAStar.cpp  MAPFSolver.cpp  PBS.cpp  PBSNode.cpp  PathTable.cpp  PriorityGraph.cpp  ReservationTable.cpp  SIPP.cpp  SingleAgentSolver.cpp  StateTimeAStar.cpp  States.cpp  WHCAStar.cpp  common.cpp
src/util/: Analyzer.cpp  HeuristicTable.cpp  MyLogger.cpp  Timer.cpp  analyze.cpp
test/: my_logger.cpp  my_openlist.cpp  thread_pool.cpp
